--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -7,6 +7,7 @@
 
 .add-option {
     display: flex;
+    flex-direction: column;
     padding: $m-size
 }
 
@@ -15,7 +16,18 @@
     background: $dark-blue;
     border-bottom: .3rem solid darken($dark-blue, 10%);
     border: none;
-    margin-right: $s-size;
+    margin: 0 0 $s-size 0;
+    // margin-right: $s-size;
     color: $off-white;
     padding: $s-size;
+}
+
+@media (min-width: $desktop-breakpoint) {
+    .add-option {
+        flex-direction: row;
+    }
+
+    .add-option__input {
+        margin: 0 $s-size 0 0;
+    }
 }
